--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,29 @@
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"></link>
+  <style>
+    li.list-item {
+        height: 66px;
+    }
+    li.list-item div.list-item-image-container {
+        width: 66px;
+        height: 100%;
+	float: left;
+    }
+    li.list-item img.list-item-image {
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-size: contain;
+  	background-repeat: no-repeat;
+  	background-position: center;
+    }
+    li.list-item h4.list-item-content {
+	margin-left: 80px;
+	line-height: 66px;
+    }
+  </style>
   <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
   <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
@@ -61,9 +84,12 @@
     function ItemList(props) {
       const items = props.items;
       const listItems = items.map((item) =>
-        <li key={item.id}>
-        {item.content}
-      </li>
+        <li key={item.id} className="list-item">
+	  <div className="list-item-image-container">
+	  <img className="list-item-image" style={{backgroundImage: 'url(' + item.meta.imageUrl + ')'}} />
+          </div>
+	  <h4 className="list-item-content">{item.content}</h4>
+        </li>
       );
       return (
         <ul>{listItems}</ul>
