--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   	background-position: center;
     }
     li.list-item h4.list-item-content {
-	margin-left: 80px;
+	margin-left: 70px;
 	line-height: 66px;
     }
   </style>
@@ -92,7 +92,7 @@
         </li>
       );
       return (
-        <ul>{listItems}</ul>
+        <ul className="list">{listItems}</ul>
       );
     }
   </script>
