--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
   <meta charset=utf-8 />
   <meta name="google-play-app" content="app-id=com.pinyaoting.garcondecuisine">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="fb:app_id" content="392989124371977" />
+  <meta property="og:title" content="Garçon de Cuisine" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://garcon-de-cuisine.firebaseapp.com" />
+  <meta property="og:image" content="http://garcon-de-cuisine.firebaseapp.com/icon.png" />
+  <meta property="og:image:secure_url" content="https://garcon-de-cuisine.firebaseapp.com/icon.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="192" />
+  <meta property="og:image:height" content="192" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"></link>
   <link rel="stylesheet" type="text/css" href="smart-app-banner.css">
   <link rel="apple-touch-icon" href="icon.png">
