--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   <meta property="og:title" content="Garçon de Cuisine" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://garcon-de-cuisine.firebaseapp.com" />
-  <meta property="og:image" content="http://garcon-de-cuisine.firebaseapp.com/icon.png" />
-  <meta property="og:image:secure_url" content="https://garcon-de-cuisine.firebaseapp.com/icon.png" />
+  <meta property="og:image" content="http://garcon-de-cuisine.firebaseapp.com/icon_large.png" />
+  <meta property="og:image:secure_url" content="https://garcon-de-cuisine.firebaseapp.com/icon_large.png" />
   <meta property="og:image:type" content="image/png" />
-  <meta property="og:image:width" content="192" />
-  <meta property="og:image:height" content="192" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"></link>
   <link rel="stylesheet" type="text/css" href="smart-app-banner.css">
   <link rel="apple-touch-icon" href="icon.png">
